clusters/ocp/oadp/default-deny-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-adp
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
